# dipped.dev

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  TODO.md  build.rs  package-lock.json  package.json  tsconfig.json
assets/css/: index.scss
assets/css/minecraft/: index.scss  server.scss
assets/css/roleEater/: dashboard.scss  index.scss
assets/css/role_eater/: dashboard.scss
assets/js/: auth.js  index.js
assets/js/minecraft/: home.js  servers.js
assets/js/roleEater/: dashboard.js  guild.js  (+4 more)
html/: 403.html  head.html  nav.html
html/minecraft/: head.html  index.html  server.html  serverCardTemplate.html
html/role-eater/: head.html  index.html
html/status_codes/: 404.html  500.html
prototype/: index.html  index.scss  logged_in.html  logged_in_popout.html  minecraft.html  projects.html  r6.html  role_eater.html  status.html
public/: 404.html  ads.txt  head.html  nav.html  robots.txt  sitemap.xml
public/dashboard/: guild.html  guildHead.html  guildUserHead.html  head.html
public/html/: head.html  index.html
public/minecraft/: index.html  packInfo.example.txt  server.html
public/role-eater/: head.html  index.html
public/root/: 404.html  home.html  nav.html
public/root_old/: 404.html  body.html  head.html  nav.html
public/scripts/: auth.js
public/styles/: index.scss
src/: api.rs  api.ts  constants.ts  dashboard.ts  database.ts  index.ts  main.rs  minecraft.rs  minecraft.ts  models.rs  projects.ts  schema.rs  utilities.rs
src/bot/: index.ts
src/classes/: Client.ts  Command.ts  Event.ts  logger.ts
src/events/: error.ts  guildCreate.ts  guildUpdate.ts  interactionCreate.ts  messageCreate.ts  userUpdate.ts  voiceStateUpdate.ts
src/handlers/: database.ts  messageContextCommand.ts  prefixCommand.ts  slashCommand.ts  userContextCommand.ts
src/minecraft/: api.rs  mod.rs
src/role_eater/: api.rs  dashboard.rs  mod.rs
src/routes/: api.ts  dashboard.ts  index.ts  minecraft.ts  projects.ts
src/templates/: caret.rs  head.rs  minecraft.rs  mod.rs  nav.rs  root.rs  status.rs  terminal.rs  terminal_line.rs
src/types/: database.type.ts  index.d.ts
src/webServer/: constants.ts  dashboard.ts  database.ts  index.ts
(+98 files in other folders)
