[package]
name = "website"
version = "0.2.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
mime_guess = "2.0.5"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "normalize-path"] }
