[package]
name = "dipped_dev"
version = "0.2.0"
edition = "2024"

[dependencies]
askama = "0.15.0"
axum = { version = "0.8.8", features = ["http2", "macros", "ws"] }
chrono = { version = "0.4.42", features = ["now"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.3.5", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
mime_guess = "2.0.5"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "normalize-path"] }
