[package]
name = "dipped_dev"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "macros", "ws"] }
chrono = { version = "0.4.42", features = ["now"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.3.5", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.31"
glob = "0.3.3"
grass = "0.13.4"
maud = { version = "0.27.0", features = ["axum"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "normalize-path"] }

[build-dependencies]
glob = "0.3.3"
grass = "0.13.4"
